force-app/main/default/objects/ccrz__E_CartItemPricingTier__c/ccrz__E_CartItemPricingTier__c.object-meta.xml
<CustomObject>
    <description>Pricing tiers for the cart item. Contains stepped pricing info.</description>
    <label>CC Cart Item Pricing Tier</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Cart Item Pricing Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Item Pricing Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>