force-app/main/default/objects/ccrz__E_CartItemPricingTier__c/fields/ccrz__CartItem__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartItem__c</fullName>
    <description>Reference to the cart line item this tier applies to.</description>
    <label>Cart Item</label>
    <referenceTo>ccrz__E_CartItem__c</referenceTo>
    <relationshipName>Cart_Item_Pricing_Tiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>