force-app/main/default/objects/ccrz__E_CartItemPricingTier__c/fields/ccrz__CartItemPricingTierId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartItemPricingTierId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Cart Item Pricing Tier Ext Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>