force-app/main/default/objects/ccrz__E_CartItemPricingTier__c/fields/ccrz__Price__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Price__c</fullName>
    <description>The price for the tier.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>