force-app/main/default/objects/ccrz__E_CartItemPricingTier__c/fields/ccrz__SubAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubAmount__c</fullName>
    <description>The line total for the tier.</description>
    <label>SubAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>